--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ colorama==0.4.6
 cron_descriptor==2.0.6
 Django==5.2.10
 django-celery-beat==2.8.1
+django-cors-headers==4.9.0
 django-timezone-field==7.2.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
