--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 colorama==0.4.6
+coverage==7.13.1
 cron_descriptor==2.0.6
 Django==5.2.10
 django-celery-beat==2.8.1
@@ -24,12 +25,18 @@ eventlet==0.40.4
 greenlet==3.3.0
 idna==3.11
 inflection==0.5.1
+iniconfig==2.3.0
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
 kombu==5.6.2
 packaging==25.0
+pluggy==1.6.0
 prompt_toolkit==3.0.52
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==9.0.2
+pytest-cov==7.0.0
+pytest-django==4.11.1
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
