Настройка окружения docker-compose (Django, Postgres, Redis, Celery, Nginx)

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,21 @@
 SECRET_KEY=
-
-DEBUG=True
+DEBUG=False
 
 ALLOWED_HOSTS=127.0.0.1,localhost
 
 TELEGRAM_BOT_TOKEN=
 
 # Redis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
+
+База данных
+DB_ENGINE=postgres
+POSTGRES_DB=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+CORS_ALLOW_ALL_ORIGINS=True
