--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,7 @@ uritemplate==4.2.0
 urllib3==2.6.3
 vine==5.1.0
 wcwidth==0.2.14
+psycopg2-binary==2.9.9
+gunicorn==23.0.0
+psycopg2-binary==2.9.9
+python-dotenv==1.2.1
