--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 SECRET_KEY=
 DEBUG=False
 
-ALLOWED_HOSTS=127.0.0.1,localhost
+ALLOWED_HOSTS=127.0.0.1,localhost,89.169.175.13
 
 TELEGRAM_BOT_TOKEN=
 
